Added signature & sql part